fix scrolling on mobile

--- a/style.scss
+++ b/style.scss
@@ -316,6 +316,7 @@ footer {
 @media only screen and (max-width: 414px) {
     main {
         align-items: flex-start;
+        height: unset;
     }
 
     .container {
